--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
       body{
         background-color: whitesmoke;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -188,7 +187,7 @@
         padding-bottom: 0;
         text-align: center;
         font-size: 20px;
-        border: 1.5px solid fuchsia;
+        border: none;
         border-radius: 4px;
         box-shadow: 0 0 15px rgb(250, 4, 250, 0.2);
         background-color: transparent;
@@ -196,7 +195,7 @@
         
       }
       div.visible-text:hover{
-        box-shadow: 0 0 15px rgb(65, 238, 221, 0.4);
+        box-shadow: 0 0 15px rgb(0, 0, 0, 0.4);
 
       }
 
@@ -781,7 +780,6 @@
       
       
     
-=======
       body{
         background-color: whitesmoke;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -2123,9 +2121,3 @@
       }
 
       
-    
-      
-      
-    
->>>>>>> c9aedd6 (My CODE)
-    
