--- a/public/css/help.css
+++ b/public/css/help.css
@@ -436,7 +436,7 @@
                         .nav-bar-tabs{
                           width: 100%;
                           
-                          height: 55px;
+                          height: 60px;
                           display: grid;
                           grid-template-columns: repeat(4, 1fr); /* 4 equal columns */
                           margin-left: 0%;
@@ -450,7 +450,9 @@
                           color: rgb(10, 10, 10, 0.7);
                         }
                         .bottnav-icon-container{
-                          border-left: 1px solid rgb(111, 110, 110, 0.7);
+                          height: 35px;
+                          margin-top: 1%;
+                          border-left: 1px solid rgb(111, 110, 110, 0.5);
                         }
                         .bottnav-icon-container:nth-child(1){
                           border-left: none;
