--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1295,11 +1295,10 @@
           box-shadow: -10px 0 25px rgb(255, 69, 0, 0.5);
   
   
-        }
-  
+        }  
   
         .show-categories-dropdown{
-          display: block;
+          display: none;
         }
   
   
