--- a/public/css/account.css
+++ b/public/css/account.css
@@ -180,7 +180,8 @@
 
     div.floated-right-block{
       flex: 1;
-      margin: auto;
+      margin: 2% auto;
+      max-width: 100%;
 
     }
     
@@ -236,8 +237,7 @@
 
     
     
-    
-
+      
     .container{
       background-color: white;
       max-width: 94%;
@@ -249,14 +249,27 @@
       border-top-right-radius: 10px;
 
     }
+    div#non-default-containers{
+      display: none;
+    }
+    div.quick-utility-headings{
+      text-align: center;
+      font-size: 1em;
+      font-weight: bold;
+    }
     .container-headings{
       margin-left: 5%;
+      font-size: 1em;
+      font-weight: 500;
       text-align: left;
     }
     div.container-sub-tabs{
       display: flex;
       max-width: 90%;
       margin: 0 auto;
+    }
+    dd.is-collpsed{
+      display: none;
     }
     div.sub-tabs{
       flex: 1;
@@ -289,7 +302,7 @@
       height: fit-content;
       padding: 10px;
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(5, 1fr);
       gap: 20px;
       box-shadow: 0 5px 10px rgb(0, 0, 0, 0.3);
       height: fit-content;      
@@ -309,7 +322,13 @@
       font-size: 2em;
       padding-left: 15px;
 
-    }    
+    }   
+    
+    .utility-container div#payments:hover{
+      box-shadow: 5px 5px 10px rgb(252, 165, 4, 0.8);
+      transform: translateX(15px);
+      transition: 0.6s ease-in-out;
+    }
       
     .utility-container div#settings:hover{
       box-shadow: 5px 5px 10px rgb(244, 6, 244, 0.8);
@@ -712,6 +731,12 @@
 
 
     /*Responsive styles*/
+    @media (max-width: 768px) {
+      div.right-nav{
+        display: flex;
+        margin-left: 20%;
+      }
+    }
 
 
     @media (max-width: 600px) {
@@ -732,8 +757,7 @@
       div.left-nav{
         
         display: none;
-      }
-      
+      }     
         
   
       div.right-nav{
@@ -796,6 +820,9 @@
   
       }
   
+      .is-collapsed{
+        display: none;
+      }
 
       div.cards{
         width: 30%;
@@ -814,6 +841,7 @@
         font-size: 12px;
       }
 
+     
 
       .container{
         background-color: white;
@@ -822,16 +850,41 @@
         max-height: auto;
         margin: 2% auto;
         padding: 8px; 
-        height: auto;    
-        
+        height: auto; 
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;        
   
+      }
+      div#non-default-containers{
+        display: block;
+      }
+      div.quick-utility-headings{
+        font-weight: 500;
       }
       .container-headings{
         margin-left: 5%;
-        font-size: 14px;
         text-align: left;
 
       }
+      .container-headings::before{
+        content: '+';
+        float: left;
+        font-size: 2em;
+        line-height: 0.5em;
+        padding-right: 25%;
+        color: orangered;
+        transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+      }
+
+      div#subtabs-collapsed{
+        display: none;
+      }
+      div#subtabs-collapsed.active{
+        display: flex;
+        flex-direction: row;
+
+      }
+
       div.container-sub-tabs{
         display: flex;
         max-width: 100%;
@@ -853,8 +906,11 @@
         margin: 1% auto;      
         padding: 5px;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(5, 1fr);
         gap: 10px;
+        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 5px;
+
         
       }
       div.utility-cards{
