--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,6 @@
       body{
+        margin: 0;
+        padding: 0;
         background-color: whitesmoke;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       }
@@ -1498,13 +1500,13 @@
   
   
         div.layer-two-tabs{
-          width: 95%;
+          width: 100%;
+          margin: auto;
           height: 60px;
           display: grid;
           grid-template-columns: repeat(4, 1fr); /* 4 equal columns */
           bottom: 0;
-          margin-left: 0%;
-          margin-right: 1.5%;
+          left: 0;
           position: fixed;
           background-color: whitesmoke;
           box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -1514,101 +1516,23 @@
         
         .icon-text{
           display: block;
-          font-size: 16px;
+          transform: translateY(-80%);
+          font-size: 14px;
         }
         .layer-two-tabs div.icon-container{
-          width: 70%;
-          height: 30px;
-          margin-bottom: 1%;
+          flex: 1;
+          margin: auto;
           position: relative;
           background-color: transparent;
-          color: fuchsia;
           text-align: center;
-          border-radius: 8px;
-          margin-top: 2%;
+          color: black;
   
         }
         .layer-two-tabs i{
-          color: blue;
+          color: #fe055c;
+          font-size: 10px;
         }
   
-        .layer-two-tabs i#shopping-bag{
-          font-size: 16px;
-
-          cursor: pointer;
-          margin-left: 20%;
-          padding-right: 15px;
-          position: relative;
-          transition: all 0.3s ease;
-        }
-        .layer-two-tabs i#shopping-bag:hover{
-          color: orangered;
-        }
-        .layer-two-tabs i#user {
-          font-size: 16px;
-
-          cursor: pointer;
-          margin-left: 20%;
-          padding-right: 15px;
-          transition: all 0.3s ease;
-        }
-        
-
-        .layer-two-tabs i#user:hover{ div.account-dropdown{
-          display: none;
-        }
-          color: orangered;
-        }
-  
-        .layer-two-tabs i#wishlist {
-          font-size: 16px;
-
-          cursor: pointer;
-          margin-left: 20%;
-          padding-right: 15px;
-          transition: all 0.3s ease;
-        }
-        .layer-two-tabs i#wishlist:hover{
-          color: red;
-        }
-  
-        .layer-two-tabs i#cart {
-          font-size: 16px;
-
-          cursor: pointer;
-          margin-left: 10%;
-          padding-right: 15px;
-          transition: all 0.3s ease;
-        }
-        .layer-two-tabs i#cart:hover{
-          color: orangered;
-        }
-  
-        /* Active icon with raised effect */
-        .icon-container.active {
-          width: 50%;
-          height: 60px;
-          background-color: white;
-          border-radius: 0 0 50% 50%;
-          position: fixed;
-          transform: translateY(-10px); /* Raised effect */
-          box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-          z-index: 1001;
-        }
-        
-        .icon-container i.active{
-          background: white;
-          border-radius: 40%;
-          transform: translateY(-15px); /* Raised effect */
-
-        }
-
-        /* Pressed background effect when an icon is active */
-        div.layer-two-tabs.active {
-          z-index: 1000;
-          background-color: whitesmoke;
-          box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.1); /* Inside shadow to create valley effect */
-      }
   
       }
 
